--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ OR enable Live mode">Run</div>
   </div>
 </div><!--end left-->
 <div id=column_sizer title="Double click to reset to middle"><span></span></div>
-<div id=right class=no_select>
+<div id=right>
   <div id=output ></div>
 </div>
 </div>
