--- a/changelog.html
+++ b/changelog.html
@@ -1,5 +1,5 @@
 
-<!DOCTYPE html><html lang="en"><meta charset="UTF-8">
+<!DOCTYPE html><html lang=en><meta charset=UTF-8>
 <style>
 :root{
 	color-scheme: light dark;
@@ -24,7 +24,7 @@ html{
   padding: 0;
 }
 body {
-  width: 100vw;
+  width: 100dvw;
   height: 100dvh;
   margin: 0 auto;
   display: flex;
@@ -34,7 +34,7 @@ body {
 }
 header,
 footer {
-  width: 100vw;
+  width: 100%;
   padding: 1ch;
   text-align: center;
 }
@@ -53,6 +53,8 @@ main {
   display: flex;
 }
 pre {
+  max-width: 95%dvw;
+  width:64ch;
   margin-bottom: 50dvh;
   margin: 0 auto;
 }
@@ -62,7 +64,14 @@ pre {
 <header><a href=index.html>Koad</a> Changelog</header>
 <main>
 <pre>
-# 2024_0226
+<details open><summary>2025</summary>
+# 2025_0310
+Adds custom text editor w/ undo redo stack + keyboard shortcuts.
+Selects message in output when user selects it.
+Makes resizable column work with touch and mouse devices.
+Adds undo redo buttons and enables when undo or redo available.
+
+# 2025_0226
 Strips indent keyboard shortcuts (until history preservable)
 Adds save input
 Adds save output
@@ -111,7 +120,9 @@ SITE
   Re-styles site theme
   Floats 'copy' button to top right of each textarea
   Alerts user site requires JavaScript (if they've disabled it).
-
+</details>
+<details>
+<summary>2023</summary>
 # 2023_0123
 Adds example template
 Styles frontend minimally
@@ -123,6 +134,7 @@ Adds live toggle (to evaluate code live or not)
 Store current data on unload
 Restore previous data on load
 Adds SVG favicon
+</details>
 </pre>
 </main>
 <footer><a href=index.html>Koad</a> by + &copy; 2023-2025 <a href=https://gregabbott.pages.dev/>Greg Abbott</a></footer>
