--- a/changelog.html
+++ b/changelog.html
@@ -58,16 +58,12 @@ pre {
   margin-bottom: 50dvh;
   margin: 0 auto;
 }
-</style>
-<title>Koad &mdash; Changelog</title>
-</head><body>
-<header><a href=index.html>Koad</a> Changelog</header>
-<main>
-<pre>
-<details open><summary>2025</summary>
+</style><title>Koad &mdash; Changelog</title>
+</head><body><header><a href=index.html>Koad</a> Changelog</header>
+<main><pre><details open><summary>2025</summary>
 # 2025_0310
 Adds custom text editor w/ undo redo stack + keyboard shortcuts.
-Selects message in output when user selects it.
+Selects message in output when user clicks it.
 Makes resizable column work with touch and mouse devices.
 Adds undo redo buttons and enables when undo or redo available.
 
