--- a/changelog.html
+++ b/changelog.html
@@ -1,6 +1,5 @@
 
-<!DOCTYPE html><html lang=en><meta charset=UTF-8>
-<style>
+<!DOCTYPE html><html lang=en><meta charset=UTF-8><style>
 :root{
 	color-scheme: light dark;
   --light: hsl(60, 25%, 95%);
@@ -61,11 +60,21 @@ pre {
 </style><title>Koad &mdash; Changelog</title>
 </head><body><header><a href=index.html>Koad</a> Changelog</header>
 <main><pre><details open><summary>2025</summary>
+# 2025_0329
+Adds syntax highlighting.
+Highlights unusual invisible characters.
+Restyles scrollbars.
+Fixes 'save to localStorage' on webkit browsers (Browser quirk).
+Stores, restores and scrolls to text selection between sessions.
+Adds basic favicon
+Makes all-in-one version
+
 # 2025_0310
 Adds custom text editor w/ undo redo stack + keyboard shortcuts.
 Selects message in output when user clicks it.
 Makes resizable column work with touch and mouse devices.
 Adds undo redo buttons and enables when undo or redo available.
+Evaluates new data when user clicks 'clear all' or 'load demo'.
 
 # 2025_0226
 Strips indent keyboard shortcuts (until history preservable)
