--- a/changelog.html
+++ b/changelog.html
@@ -60,6 +60,10 @@ pre {
 </style><title>Koad &mdash; Changelog</title>
 </head><body><header><a href=index.html>Koad</a> Changelog</header>
 <main><pre><details open><summary>2025</summary>
+# 2025_0401
+Removes select all output text on click. Allows partial select.
+Selects all text in an output the user double clicks.
+
 # 2025_0329
 Adds syntax highlighting.
 Highlights unusual invisible characters.
