--- a/changelog.html
+++ b/changelog.html
@@ -60,25 +60,41 @@ pre {
 </style><title>Koad &mdash; Changelog</title>
 </head><body><header><a href=index.html>Koad</a> Changelog</header>
 <main><pre><details open><summary>2025</summary>
+# 2025_0821
+Updates custom text editor with newer version (separate project)
+  Preserves indents on newline
+  Closes brackets and quotes
+  Indents next line more if it follows open bracket
+  Updates undo redo stack
+  Lets tab key indent when selection covers one or more lines
+
+# 2025_0818
+Swaps 'bold' syntax highlight to CSS text stroke
+  (Allows monospace fonts whose normal and bold widths differ)
+  Allows using 'bold' for proportional width fonts
+
+# 2025_0814
+Intercepts "console.warn"
+
 # 2025_0401
-Removes select all output text on click. Allows partial select.
-Selects all text in an output the user double clicks.
+Lets user partially select any output element's text
+Selects all output element text on double click
 
 # 2025_0329
-Adds syntax highlighting.
-Highlights unusual invisible characters.
+Adds syntax highlighting
+Highlights unusual invisible characters
 Restyles scrollbars.
-Fixes 'save to localStorage' on webkit browsers (Browser quirk).
-Stores, restores and scrolls to text selection between sessions.
+Fixes 'save to localStorage' on webkit browsers (Browser quirk)
+Stores, restores and scrolls to text selection between sessions
 Adds basic favicon
 Makes all-in-one version
 
 # 2025_0310
-Adds custom text editor w/ undo redo stack + keyboard shortcuts.
-Selects message in output when user clicks it.
-Makes resizable column work with touch and mouse devices.
-Adds undo redo buttons and enables when undo or redo available.
-Evaluates new data when user clicks 'clear all' or 'load demo'.
+Adds custom text editor w/ undo redo stack + keyboard shortcuts
+Selects message in output when user clicks it
+Makes resizable column work with touch and mouse devices
+Adds undo redo buttons and enables when undo or redo available
+Evaluates new data when user clicks 'clear all' or 'load demo'
 
 # 2025_0226
 Strips indent keyboard shortcuts (until history preservable)
